Added questions lesson, edit practice as off white

--- a/lessons/checkpoint_1/09_plurals.html
+++ b/lessons/checkpoint_1/09_plurals.html
@@ -79,7 +79,7 @@ title: Elisa's Duo Polski - Plurals
         </table></div>
 
     </div>
-    <div class="regular">
+    <div class="emphasis-white">
 
         <h2> Nominative Plural - Liczba mnoga mianownik </h2>
 
@@ -324,6 +324,9 @@ We also learned the way they change in accusative: Ten, tego, tę, to, tamten, t
               </tr>
             </tbody>
         </table></div>
+
+    </div>
+    <div class="regular-off-white">
 
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
