--- a/lessons/checkpoint_1/11_present_1.html
+++ b/lessons/checkpoint_1/11_present_1.html
@@ -285,6 +285,9 @@ title: Elisa's Duo Polski - Present 1
             <tr><td>Koszul<span class="blue-text">a</span></td>        <td>Koszul<span class="red-text">i</span></td></tr>
         </table></div>
 
+    </div>
+    <div class="regular-off-white">
+
         <h3> Practice exercises - Ćwiczyć ćwiczenia </h3>
 
         <div class="table-wrap"><table class="mini-table">
