--- a/lessons/checkpoint_1/13_possessive_pronouns.html
+++ b/lessons/checkpoint_1/13_possessive_pronouns.html
@@ -107,6 +107,9 @@ title: Elisa's Duo Polski - Possessive Pronouns
 
         <p>The way the possessive pronoun will change depends on the Object it’s acting upon. For example, “This is my <span class="blue-text">cat</span>”. Cat - Kot is masculine, so <span class="violet-text">my</span> will be <span class="violet-text">mój</span>. “To jest <span class="violet-text">mój</span> <span class="blue-text">kot</span>”. The gender of the owner in this case doesn’t change the inflection, but it changes which word to use when saying his or her, same as in English. For example “His cat - Jego kot”, “her cat - jej kot”. But it doesn’t matter, say, for the phrase “our cat” if the group of people is composed of men or women.</p>
 
+    </div>
+    <div class="regular-off-white">
+
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
         <div class="table-wrap"><table class="mini-table">
