--- a/lessons/checkpoint_2/17_colors.html
+++ b/lessons/checkpoint_2/17_colors.html
@@ -212,22 +212,23 @@ title: Elisa's Duo Polski - Colors
 
         Biały i czerwony to kolory - White and red are colors</p>
 
+    </div>
+    <div class="regular-off-white">
+
         <span class="section">Now let’s see some examples from Duolingo exercises:</span>
 
         <div class="table-wrap"><table class="mini-table">
-            <tr><th> Singular </th></tr>
-            <tr><th> Masculine </th></tr>
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Masculine </th></tr>
             <tr><td> Ten ptak jest zielony </td><td> This bird is green </td></tr>
             <tr><td> Pomarańczowy kot </td><td> An orange cat </td></tr>
             <tr><td> Mały różowy but </td><td> A small pink shoe </td></tr>
             <tr><td> Jej szary pies pije wodę </td><td> Her gray dog is drinking water </td></tr>
             <tr><td> Moja mama ma fioletowy kapelusz </td><td> My mom has a violet hat </td></tr>
-            <tr><td> Płaszcz tego chłopca jest kolorowy </td><td> This boy’s overcoat is colorful  </td></tr>
-            <tr><td colspan="2"> (genitive possessive for the noun, but not the adjective)<br><br> </td></tr>
-            <tr><td> Jego żona nosi czarny płaszcz </td><td> His wife wears a black overcoat </td></tr>
-            <tr><td colspan="2"> (this is in accusative, but płaszcz is an inanimate male noun, so it stays the same) </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Feminine </th></tr>
+            <tr><td> Płaszcz tego chłopca jest kolorowy </td><td> This boy’s overcoat is colorful  <br> (genitive possessive for the noun, but not the adjective)<br> </td></tr>
+
+            <tr><td> Jego żona nosi czarny płaszcz </td><td> His wife wears a black overcoat <br> (this is in accusative, but płaszcz is an inanimate male noun, so it stays the same) <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Feminine </th></tr>
             <tr><td> Czarna mysz pije wodę </td><td> A black mouse is drinking water </td></tr>
             <tr><td> Biała sukienka </td><td> A white dress </td></tr>
             <tr><td> Jej bluza jest kolorowa </td><td> Her sweatshirt is colorful </td></tr>
@@ -237,23 +238,22 @@ title: Elisa's Duo Polski - Colors
             <tr><td> Twoja mała różowa spódnica </td><td> Your small pink skirt </td></tr>
             <tr><td> Twoja córka nosi różową koszulę </td><td> Your daughter wears a pink shirt (Remember accusative) </td></tr>
             <tr><td> Ta kurtka nie jest zielona </td><td> This jacket is not green </td></tr>
-            <tr><td> Wasza bluza jest niebieska, moja jest żółta </td><td> Your sweatshirt is blue, mine is yellow </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Neuter </th></tr>
+            <tr><td> Wasza bluza jest niebieska, moja jest żółta </td><td> Your sweatshirt is blue, mine is yellow <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Neuter </th></tr>
             <tr><td> Jabłko jest czerwone </td><td> The apple is red </td></tr>
-            <tr><td> Mój wujek pije czerwone wino </td><td> My uncle is drinking red wine </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Plural Non-masculine-personal </th></tr>
+            <tr><td> Mój wujek pije czerwone wino </td><td> My uncle is drinking red wine <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Plural Non-masculine-personal </th></tr>
             <tr><td> Noszę czarne spodnie </td><td> I wear black trousers </td></tr>
             <tr><td> Mam stare czarne ubrania </td><td> I have old black clothes. </td></tr>
             <tr><td> Żółte owoce są smaczne </td><td> Yellow fruits are tasty </td></tr>
             <tr><td> Twoje skarpety są fioletowe </td><td> Your socks are violet </td></tr>
             <tr><td> Moja babcia nosi różowe skarpety </td><td> My grandmother wears pink socks </td></tr>
             <tr><td> Noszę szare majtki i pomarańczowe skarpety </td><td> I wear gray panties and orange socks </td></tr>
-            <tr><td> Żółte spodnie i niebies<span class="blue-text">k</span><span class="red-text">ie</span> buty </td><td> Yellow trousers and blue shoes  </td></tr>
-            <tr><td colspan="2"> (the -k ending consonant makes it -ie instead of -e) <br> </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Mixed </th></tr>
+            <tr><td> Żółte spodnie i niebies<span class="blue-text">k</span><span class="red-text">ie</span> buty </td><td> Yellow trousers and blue shoes  <br> (the -k ending consonant makes it -ie instead of -e) <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Mixed </th></tr>
             <tr><td> Brązowa mysz je żółty ser </td><td> A brown mouse is eating yellow cheese </td></tr>
         </table></div>
 
@@ -555,37 +555,41 @@ title: Elisa's Duo Polski - Colors
 
         Also remember, the difference between -y and -i, or -ych/-ich and so on is from the consonant at the end (-k and -g get -i and the others get -y).</p>
 
+    </div>
+    <div class="regular-off-white">
+
         <span class="section"> Let’s see some examples: </span>
 
         <p>Remember sentences can be Genitive because of negative accusative.</p>
 
         <div class="table-wrap"><table class="mini-table">
-            <tr><th> Singular </th>
-            <tr><th> Masculine nouns </th>
+            <!-- <tr><th> Singular </th> -->
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Masculine nouns </th>
             <tr><td> Twój syn nie nosi biał<span class="red-text">ego</span> kapelusz<b>a</b> </td><td> Your son does not wear a white hat </td></tr>
-            <tr><td> On nie nosi pomarańczow<span class="red-text">ego</span> kapelusz<b>a</b> </td><td> He does not wear an orange hat </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Feminine nouns </th>
+            <tr><td> On nie nosi pomarańczow<span class="red-text">ego</span> kapelusz<b>a</b> </td><td> He does not wear an orange hat <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Feminine nouns </th>
             <tr><td> Ta kobieta nie nosi żółt<span class="red-text">ej</span> kurtk<b>i</b> </td><td> This woman doesn’t wear a yellow jacket   </td></tr>
             <tr><td> On nie widzi zielon<span class="red-text">ej</span> sukienk<b>i</b> </td><td> He does not see the green dress.  </td></tr>
-            <tr><td> Nie noszę fioletow<span class="red-text">ej</span> sukienk<b>i</b> </td><td> I do not wear the violet dress </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Neuter nouns </th>
+            <tr><td> Nie noszę fioletow<span class="red-text">ej</span> sukienk<b>i</b> </td><td> I do not wear the violet dress <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Singular Neuter nouns </th>
             <tr><td> Nie lubisz czerwon<span class="red-text">ego</span> mięs<b>a</b> </td><td> You do not like red meat </td></tr>
-            <tr><td> Ona nie pije biał<span class="red-text">ego</span> win<b>a</b> </td><td> She does not drink white wine </td></tr>
-            <tr><td> ---- </td></tr>
-            <tr><th> Plural  </th>
-            <tr><th> Masculine </th>
+            <tr><td> Ona nie pije biał<span class="red-text">ego</span> win<b>a</b> </td><td> She does not drink white wine <br><br> </td></tr>
+
+            <!-- <tr><th> Plural  </th> -->
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Plural Masculine </th>
             <tr><td> On nie ma niebies<span class="blue-text">k</span><span class="red-text">ich</span> but<b>ów</b> </td><td> He doesn’t have blue shoes. </td></tr>
-            <tr><td> Nie mamy zielon<span class="red-text">ych</span> owoc<b>ów</b> </td><td> We don’t have green fruit </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Feminine </th>
+            <tr><td> Nie mamy zielon<span class="red-text">ych</span> owoc<b>ów</b> </td><td> We don’t have green fruit <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Plural Feminine </th>
             <tr><td> Nie masz czarn<span class="red-text">ych</span> skarpet </td><td> You don’t have black socks </td></tr>
-            <tr><td> Nie lubimy kolorow<span class="red-text">ych</span> koszul </td><td> We do not like colorful shirts </td></tr>
-            <tr><td> -- </td></tr>
-            <tr><th> Neutral </th>
+            <tr><td> Nie lubimy kolorow<span class="red-text">ych</span> koszul </td><td> We do not like colorful shirts <br><br> </td></tr>
+
+            <tr><th style="border-top: 1px solid #000" colspan="2"> Plural Neutral </th>
             <tr><td> Nie mamy żółt<span class="red-text">ych</span> zwierz<b>ąt</b> </td><td> We don’t have yellow animals </td></tr>
             <tr><td> On nie je zielon<span class="red-text">ych</span> jabł<b>ek</b> </td><td> He does not eat green apples </td></tr>
+            <th style="border-top: 1px solid #000" colspan="2"></th>
         </table></div>
 
     </div>
