--- a/lessons/checkpoint_1/10_clothing.html
+++ b/lessons/checkpoint_1/10_clothing.html
@@ -118,6 +118,9 @@ title: Elisa's Duo Polski - Clothing
         This is the difference between “wears” and “is wearing”.
         As with other verbs we’ve seen before, whatever the subject is wearing will be in accusative.</p>
 
+    </div>
+    <div class="regular-off-white">
+
         <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
 
         <div class="table-wrap"><table class="mini-table">
