--- a/lessons/checkpoint_1/12_negation.html
+++ b/lessons/checkpoint_1/12_negation.html
@@ -108,6 +108,9 @@ title: Elisa's Duo Polski - Negation
             </tbody>
         </table></div>
 
+    </div>
+    <div class="regular-off-white">
+
         <span class="section"> For example - Na przykład </span>
 
         <div class="table-wrap"><table class="mini-table">
