Added extra lesson button to questions lesson

--- a/lessons/checkpoint_2/17_colors.html
+++ b/lessons/checkpoint_2/17_colors.html
@@ -16,6 +16,15 @@ title: Elisa's Duo Polski - Colors
         <div class="nav-btn"><a href="/lessons#checkpoint_2">Checkpoint 2</a></div>
         <div class="nav-btn"><a href="/lessons/checkpoint_2/18_questions.html">Questions → </a></div>
     </div>
+   <!--  <div class="nav-buttons">
+        <div class="nav-btn-off">
+            ・
+        </div>
+    </div> -->
+    <div class="nav-buttons">
+        <div class="nav-btn-extra"><a href="/blog/2021-02-11-17_5_extra_1.html">Extra Vocabulary from songs → <br>(you can skip)</a></div>
+    </div>
+    
     
     <div class="regular">
         <p>Colors! This lesson is not only about color vocabulary, but about accusative and genitive declensions of adjectives and plural nouns. </p>
@@ -606,11 +615,11 @@ title: Elisa's Duo Polski - Colors
     <div class="nav-buttons">
         <div class="nav-btn-extra"><a href="/blog/2021-02-11-17_5_extra_1.html">Extra Vocabulary from songs → <br>(you can skip)</a></div>
     </div>
-    <div class="nav-buttons">
+    <!-- <div class="nav-buttons">
         <div class="nav-btn-off">
             ・
         </div>
-    </div>
+    </div> -->
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/checkpoint_1/16_family.html"> ← Family</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_2">Checkpoint 2</a></div>
