--- a/lessons/checkpoint_2/18_questions.html
+++ b/lessons/checkpoint_2/18_questions.html
@@ -12,6 +12,14 @@ title: Elisa's Duo Polski - Questions
     </div>
 
     <div class="nav-buttons">
+        <div class="nav-btn-extra"><a href="/blog/2021-02-11-17_5_extra_1.html"> ← Extra Vocabulary from songs<br>(you can skip)</a></div>
+    </div>
+    <!-- <div class="nav-buttons">
+        <div class="nav-btn-off">
+            ・
+        </div>
+    </div> -->
+    <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/checkpoint_2/17_colors.html"> ← Colors</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_2">Checkpoint 2</a></div>
         <div class="nav-btn"><a href="/lessons/checkpoint_2/19_present_3.html">Present 3 → </a></div>
@@ -332,16 +340,18 @@ title: Elisa's Duo Polski - Questions
 
     </div>
 
-
-
-
-
-
-
     <div class="nav-buttons">
         <div class="nav-btn"><a href="/lessons/checkpoint_2/17_colors.html"> ← Colors</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_2">Checkpoint 2</a></div>
         <div class="nav-btn"><a href="/lessons/checkpoint_2/19_present_3.html">Present 3 → </a></div>
+    </div>
+    <!-- <div class="nav-buttons">
+        <div class="nav-btn-off">
+            ・
+        </div>
+    </div> -->
+    <div class="nav-buttons">
+        <div class="nav-btn-extra"><a href="/blog/2021-02-11-17_5_extra_1.html"> ← Extra Vocabulary from songs<br>(you can skip)</a></div>
     </div>
     
 </div><!-- /.blurb -->
