--- a/lessons/checkpoint_2/18_questions.html
+++ b/lessons/checkpoint_2/18_questions.html
@@ -5,10 +5,10 @@ title: Elisa's Duo Polski - Questions
 
 <div class="blurb">
     <div class="emphasis-white">
-        <h1 style="width:100%;text-align:center;display:block;">Kolory</h1>
+        <h1 style="width:100%;text-align:center;display:block;">Pytania</h1>
     </div>
     <div class="emphasis-red">
-        <h1 style="width:100%;text-align:center;display:block;">Colors</h1>
+        <h1 style="width:100%;text-align:center;display:block;">Questions</h1>
     </div>
 
     <div class="nav-buttons">
